# OBS-Toolkit

./: .clang-format  .gitignore  CMakeLists.txt  conandata.yml  conanfile.py  configure.py
.github/actions/build-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: Configure-Windows.ps1  configure-macos.zsh  configure-ubuntu.zsh
build-aux/: .run-format.zsh
cmake/: .CMakeBuildNumber
cmake/common/: ENV_Loader.cmake  buildspec_common.cmake  compiler_common.cmake  helpers_common.cmake
cmake/linux/: defaults.cmake  helpers.cmake
cmake/macos/: buildspec.cmake  helpers.cmake
cmake/windows/: buildspec.cmake  compilerconfig.cmake  helpers.cmake
plugin/backend/: CMakeLists.txt
plugin/common/: CMakeLists.txt
plugin/common/inc/: EventManager.h  obs-helpers.h  plugin-support.h
plugin/common/src/: EventManager.cpp  obs-helpers.cpp  plugin-support.cpp.in
plugin/frontend/: CMakeLists.txt
plugin/frontend/inc/: FrontendEvents.h  MultiValueSlider.h  PartitionSettingsWidget.h  PluginDock.h  PluginFrontend.h  PluginSettingsWindow.h  SourcePartitionSelector.h  SourceSelectorWindow.h
plugin/frontend/src/: MultiValueSlider.cpp  PartitionSettingsWidget.cpp  PluginDock.cpp  PluginEvents.cpp  PluginFrontend.cpp  PluginSettingsWindow.cpp  SourcePartitionSelector.cpp  SourceSelectorWindow.cpp
plugin/inc/: plugin-support.h
plugin/main/: CMakeLists.txt
plugin/main/src/: plugin-main.cpp
plugin/src/: plugin-main.cpp
